# macstats

./: CLAUDE.md  Cargo.toml  INFLUXDB.md
macsmc/: CLAUDE.md  sensor_list.swift
macsmc/examples/: platform_demo.rs
macsmc/src/: cffi.rs  client.rs  commands.rs  connection.rs  data.rs  error.rs  iterators.rs  keys.rs  lib.rs  parsers.rs  platform.rs  types.rs
src/: config.rs  influx.rs  main.rs
