# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["macsmc"]

[package]
name = "macstats"
version = "0.1.3"
authors = ["Paul Horn <ǝp ʇop ɹǝʞlɐʍʇnuʞ ʇɐ ɹǝdolǝʌǝp>"]
description = "Read system stats from macOS SMC"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/knutwalker/macstats/"
repository = "https://github.com/knutwalker/macstats/"
categories = ["command-line-utilities", "os"]
keywords = ["macos", "smc", "cpu"]

[dependencies]
macsmc = { path = "macsmc" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
toml = "0.8"
hostname = "0.4"

[profile.release]
opt-level = 2
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false
